--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,9 @@
 @import "tailwindcss";
-@tailwind utilities;
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,8 +16,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: white;
-  font-family: "Source Han Sans CN", sans-serif;
+  background: rgb(var(--background-rgb));
+  font-family: 'Urbanist', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -79,4 +78,12 @@ h1, h2, h3, h4, h5, h6 {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.font-display {
+  font-family: 'Vast Shadow', cursive;
+}
+
+.font-body {
+  font-family: 'Lufga', sans-serif;
 }
