--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -22,7 +22,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Alibaba PuHuiTi", sans-serif;
+  font-family: 'Urbanist', sans-serif;
 }
 
 .container {
@@ -82,9 +82,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .font-display {
-  font-family: 'Vast Shadow', cursive;
+  font-family: 'Urbanist', sans-serif;
 }
 
 .font-body {
-  font-family: 'Lufga', sans-serif;
+  font-family: 'Urbanist', sans-serif;
 }
